--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "homepage": "https://walletconnect.org",
   "license": "LGPL-3.0",
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "bluebird": "^3.7.2",
-    "fastify": "^2.15.3",
-    "fastify-helmet": "^3.0.2",
-    "pino-pretty": "^4.2.1",
-    "redis": "^2.8.0",
-    "ws": "^7.3.1"
+    "fastify": "^v3.20.1",
+    "fastify-helmet": "^5.3.2",
+    "redis": "^3.1.2",
+    "ts-node": "^10.1.0",
+    "ws": "^8.0.0"
   },
   "scripts": {
     "build": "babel ./src --extensions '.ts' --out-dir ./build",
